# kmers

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
benches/: simple_benchmark.rs
naive_impl/: canonical_kmer.rs  canonical_kmer_iterator.rs  kmer.rs  mod.rs  seq_vector.rs
src/: kmer.rs  lib.rs  utils.rs
src/encoding/: mod.rs  naive.rs  xor10.rs
src/naive_impl/: canonical_kmer.rs  canonical_kmer_iterator.rs  checked.rs  hash.rs  kmer.rs  mod.rs  seq_vector.rs
src/naive_impl/seq_vector/: minimizers.rs
