[package]
name = "kmers"
version = "0.1.0"
authors = ["Rob Patro <rob-p@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "0.10"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"
random-string = "1.0"

[[bench]]
name = "simple_benchmark"
harness = false